--- a/data/web/ControlRfid/access/templates/access/eventos.html
+++ b/data/web/ControlRfid/access/templates/access/eventos.html
@@ -32,34 +32,92 @@
 
 
 {% block body %}
-  {% include './messages.html' %}
+  {% if messages %}
+    <ul class="messages">
+    {% for msg in messages %}       
+    <li>
+        <div class="alert alert-{{msg.level_tag}}" role="alert">
+        {{msg.message}}
+        </div>
+    </li>
+    {% endfor %}
+</ul>
+{% endif %}
+
   <div class="panel panel-primary">
-    <div class="panel-heading">Zonas</div>
+    <div class="panel-heading"> Ambientes</div>
+     <div class="row">
+        <div class="col-sm-10">
+          {% render_table ambiente %}
+        </div>
+      </div>
+      <a class="small-box-footer" href="http://localhost:8000/admin/access/ambiente/">Deleta Ambiente <i class="fa fa-arrow-circle-right"></i></a>
+  </div>
+
+  <div class="panel panel-primary">
+    <div class="panel-heading"> Zonas</div>
      <div class="row">
         <div class="col-sm-10">
           {% render_table zona %}
         </div>
       </div>
+    <a class="small-box-footer" href="http://localhost:8000/admin/access/zona/">Deleta Zona <i class="fa fa-arrow-circle-right"></i></a>
   </div>
-
+    
   <div class="panel panel-primary">
-    <div class="panel-heading">Eventos</div>
+    <div class="panel-heading"> Eventos</div>
      <div class="row">
         <div class="col-sm-10">
-          {% render_table evento %}
+             <form action="" method="get" class="form form-inline">
+                {% render_table evento  %}
+             </form>
         </div>
       </div>
   </div>
+ 
+
+
+  {% block content %}
+    <div class="panel panel-primary" >
+    <div class="panel-heading"> Liberar Tag</div>
+      <form method="POST" class="post-form" >
+        {% csrf_token %}
+        <div class="row">
+          <div class="col-md-2">
+            {%  bootstrap_field form_zona.fechadura %}
+          </div>
+          <div class="col-md-3">
+            {%  bootstrap_field form_zona.etiqueta %}
+          </div>
+        </div>
+        {% buttons submit='OK' reset="Cancel" %}{% endbuttons %}
+          <!-- {{ form.as_p  }} -->
+      </form>
+    </div>
 
   <div class="panel panel-primary">
-      {% block content %}
-  <div class="panel-heading">Liberar Tag</div>
-      <form method="POST" class="post-form">{% csrf_token %}
-          {{ form.as_p  }}
-          <button type="submit" class="btn btn-success">Save</button>        
+    <div class="panel-heading"> Resgistrar Ambiente</div>
+      <form method="POST" class="post-form" >
+        {% csrf_token %}
+        <div class="row">
+          <div class="col-md-3">
+            {%  bootstrap_field form_ambiente.fechadura %}
+          </div>
+          <div class="col-md-2">
+            {%  bootstrap_field form_ambiente.ambiente %}
+          </div>
+          <div class="col-md-6">
+            {%  bootstrap_field form_ambiente.descri %}
+           </div>
+        </div>
+ 
+        {% buttons submit='OK' reset="Cancel" %}{% endbuttons %}
+          <!-- {{ form.as_p  }} -->
       </form>
+    </div>
   {% endblock %}
-  </div>
+
+
 
     
 {% endblock body %}
