--- a/data/web/ControlRfid/access/templates/access/index.html
+++ b/data/web/ControlRfid/access/templates/access/index.html
@@ -1,37 +1,81 @@
 {% extends "commons/blank.html" %}
 {% load staticfiles %}
+{% load render_table from django_tables2 %}
+{% load crispy_forms_tags %}
+{% load bootstrap3 %}
+
+{% block scripts %}
+<script>
+var ctx = document.getElementById("productsChart");
+var names = JSON.parse('{{ chart_descri }}');
+var descri = JSON.parse('{{ chart_evento }}');
+var productsChart = new Chart(ctx, {
+    type: 'line',
+    data: {
+        labels: names,
+        datasets: [{
+            label: 'Acessos',
+            data: descri,
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+});
+</script>
+{% endblock %}
 
 {% block site_banner_status %}
           <div class="row">
-            {% if users_in_count > 0 %}
             <div class="col-lg-3 col-xs-6">
               <!-- small box -->
               <div class="small-box bg-green">
                 <div class="inner">
-                  <h3>{{ users_in_count }}<sup style="font-size: 20px"> Users</sup></h3>
-                  <p>Site OPEN</p>
+                  <h3>{{ evento_count_s }}<sup style="font-size: 20px"> Liberado</sup></h3>
+                  <p>Eventos Liberados</p>
                 </div>
                 <div class="icon">
                   <i class="glyphicon glyphicon-thumbs-up"></i>
                 </div>
-                <a class="small-box-footer" href="#">More info <i class="fa fa-arrow-circle-right"></i></a>
+                <a class="small-box-footer" href="http://localhost:8000/accounts/profile/eventos">More info <i class="fa fa-arrow-circle-right"></i></a>
               </div>
             </div><!-- ./col -->
-            {% else %}
             <div class="col-lg-3 col-xs-6">
               <!-- small box -->
               <div class="small-box bg-red">
                 <div class="inner">
-                  <h3>0<sup style="font-size: 20px"> Users</sup></h3>
-                  <p>Site CLOSED</p>
+                  <h3>{{ evento_count_n }}<sup style="font-size: 20px"> Negado</sup></h3>
+                  <p>Eventos Negadas</p>
                 </div>
                 <div class="icon">
                   <i class="glyphicon glyphicon-thumbs-down"></i>
                 </div>
-                <a class="small-box-footer" href="#">More info <i class="fa fa-arrow-circle-right"></i></a>
+                <a class="small-box-footer" href="http://localhost:8000/accounts/profile/eventos">More info <i class="fa fa-arrow-circle-right"></i></a>
               </div>
             </div><!-- ./col -->
-            {% endif %}
             </div>
             
 {% endblock site_banner_status %}
@@ -43,91 +87,32 @@
               <div class="small-box bg-aqua">
                 <div class="inner">
                   <h3>{{ users_count }}</h3>
-                  <p>User Registrations</p>
+                  <p>Usuarios Registrados</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-person-add"></i>
                 </div>
-                <a class="small-box-footer" href="#">More info <i class="fa fa-arrow-circle-right"></i></a>
+                <a class="small-box-footer" href="http://localhost:8000/admin/auth/user/">More info <i class="fa fa-arrow-circle-right"></i></a>
               </div>
             </div><!-- ./col -->
             <div class="col-lg-3 col-xs-6">
               <!-- small box -->
               <div class="small-box bg-yellow">
                 <div class="inner">
-                  <h3>xx</h3>
-                  <p>User Registrations</p>
+                  <h3>{{ evento_count }}</h3>
+                  <p>Eventos Registrados</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-stats-bars"></i>
                 </div>
-                <a class="small-box-footer" href="#">More info <i class="fa fa-arrow-circle-right"></i></a>
+                <a class="small-box-footer" href="http://localhost:8000/accounts/profile/eventos">More info <i class="fa fa-arrow-circle-right"></i></a>
               </div>
             </div><!-- ./col -->
           </div>
+
+
 {% endblock site_banner_info %}
 
-{% block box_carousel %}
-         <section class="content">
-          <!-- Default box -->
-          <div class="box">
-            <div class="box-header with-border">
-              <h3 class="box-title">Technology Used</h3>
-              <div class="box-tools pull-right">
-                <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
-                <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
-              </div>
-            </div>
-            <div class="box-body">
-              <!-- Carousel -->
-              <center>
-              <div class="box-body">
-              <div data-ride="carousel" class="carousel slide" id="carousel-example-generic">
-                <ol class="carousel-indicators">
-                  <li class="" data-slide-to="0" data-target="#carousel-example-generic"></li>
-                  <li class="" data-slide-to="1" data-target="#carousel-example-generic"></li>
-                  <li class="active" data-slide-to="2" data-target="#carousel-example-generic"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="item">
-                    <img alt="First slide" src="http://placehold.it/900x500/39CCCC/ffffff&amp;text=I+Love+Bootstrap">
-
-                    <div class="carousel-caption">
-                      First Slide
-                    </div>
-                  </div>
-                  <div class="item">
-                    <img alt="Second slide" src="http://placehold.it/900x500/3c8dbc/ffffff&amp;text=I+Love+Bootstrap">
-
-                    <div class="carousel-caption">
-                      Second Slide
-                    </div>
-                  </div>
-                  <div class="item active">
-                    <img alt="Third slide" src="http://placehold.it/900x500/f39c12/ffffff&amp;text=I+Love+Bootstrap">
-
-                    <div class="carousel-caption">
-                      Third Slide
-                    </div>
-                  </div>
-                </div>
-                <a data-slide="prev" href="#carousel-example-generic" class="left carousel-control">
-                  <span class="fa fa-angle-left"></span>
-                </a>
-                <a data-slide="next" href="#carousel-example-generic" class="right carousel-control">
-                  <span class="fa fa-angle-right"></span>
-                </a>
-              </div>
-            </div>
-            </center>
-              <!-- /Carousel -->
-            </div><!-- /.box-body -->
-            <div class="box-footer">
-              Thanks to all who have helped me!
-            </div><!-- /.box-footer-->
-          </div><!-- /.box -->
-         </section><!-- /.content -->
-{% endblock box_carousel %}
 
 {% block page_header %}
         <!-- Content Header (Page header) -->
@@ -152,3 +137,16 @@
             </div>
           </div>
 {% endblock user_panel %}
+
+{% block body %}
+  <div class="panel panel-primary">
+    <div class="panel-heading">Eventos</div>
+     <div class="row">
+        <div class="col-sm-10">
+          {% render_table evento %}
+        </div>
+      </div>
+  </div>
+
+{% endblock body %}
+
